# ed25519-ref10

./: Cargo.toml  README.md  build.rs
src/: crypto_api.h  fe.c  fe.h  ge.c  keypair.c  lib.rs  open.c  pubkey.c  sc.c  sign.c
